--- a/.github/workflows/blacksmith.yml
+++ b/.github/workflows/blacksmith.yml
@@ -12,6 +12,8 @@ on:
         type: choice
         options:
           - ubuntu-latest
+          - windows-latest
+          - macos-latest
           - blacksmith-2vcpu-ubuntu-2204
           - blacksmith-4vcpu-ubuntu-2204
           - blacksmith-8vcpu-ubuntu-2204
