--- a/.github/workflows/terraform-billing.yml
+++ b/.github/workflows/terraform-billing.yml
@@ -10,6 +10,8 @@ permissions:
   contents: read
   actions: read
 
+env:
+  WORKING-DIRECTORY: ./terraform
 jobs:
     terraform-plan:
         runs-on: ubuntu-latest
@@ -30,31 +32,73 @@ jobs:
           with:
             terraform_version: 1.7.5 
     
-        - name: Terraform Init
-          working-directory: ./terraform
+        - name: Terraform Format
+          id: fmt
+          working-directory: ${{ env.WORKING-DIRECTORY }}
+          run: terraform fmt -recursive -check=true
+      
+        - name: Terraform Initialize
+          id: init
+          working-directory: ${{ env.WORKING-DIRECTORY }}
           run: terraform init
-    
+      
+        - name: Terraform Validate
+          id: validate
+          working-directory: ${{ env.WORKING-DIRECTORY }}
+          run: terraform validate -no-color
+      
         - name: Terraform Plan
-          working-directory: ./terraform
-          run: terraform plan
-
-        - name: Terraform plan
-          working-directory: ./terraform
-          run: terraform plan -out tfplan.binary
+          id: plan
+          working-directory: ${{ env.WORKING-DIRECTORY }}
+          run: terraform plan -no-color
           
+        - uses: actions/github-script@0.9.0
+          if: github.event_name == 'pull_request'
+          env:
+            PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+          with:
+              github-token: ${{ secrets.GITHUB_TOKEN }}
+              script: |
+                const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+                #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+                #### Terraform Validation 🤖\`${{ steps.validate.outputs.stdout }}\`
+                #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+                
+                <details><summary>Show Plan</summary>
+                
+                \`\`\`\n
+                ${process.env.PLAN}
+                \`\`\`
+                
+                </details>
+                
+                *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+                  
+                github.issues.createComment({
+                  issue_number: context.issue.number,
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  body: output
+                })
+      
+        - name: Terraform plan
+          working-directory: ${{ env.WORKING-DIRECTORY }}
+          run: terraform plan -out tfplan.binary
+            
+      
         - name: Terraform show
-          working-directory: ./terraform
+          working-directory: ${{ env.WORKING-DIRECTORY }}
           run: terraform show -json tfplan.binary > plan.json
-
+      
         - name: Setup Infracost
           uses: infracost/actions/setup@v1
           with:
              api-key: ${{ secrets.INFRACOST_API_KEY }}
-    
+      
         - name: Generate Infracost JSON
-          working-directory: ./terraform
+          working-directory: ${{ env.WORKING-DIRECTORY }}
           run: infracost breakdown --path plan.json --format json --out-file /tmp/infracost.json
-    
+      
         - name: Post Infracost comment
           uses: infracost/actions/comment@v1
           with:
