--- a/.github/workflows/blacksmith.yml
+++ b/.github/workflows/blacksmith.yml
@@ -32,5 +32,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Loop Performance Test Action
-        uses: ./github/actions/loop
+      - name: Measure Loop Execution Time in Milliseconds
+        run: |
+          start_time=$(date +%s%N)
+          for ((i=0; i<10000000; i++))
+          do
+            a=$((i * i))
+          done
+          end_time=$(date +%s%N)
+          execution_time=$(( (end_time - start_time) / 1000000 ))
+          echo "Execution time: $execution_time milliseconds"
