--- a/.github/workflows/file-change-test.yml
+++ b/.github/workflows/file-change-test.yml
@@ -21,10 +21,10 @@ jobs:
 
       - name: 出力１
         run: |
-          echo ${{ github.event.head_commit.message }}
+          echo ${{ github.event.commits.*.modified }}
 
       - name: 出力２
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, 'files-test/test.text') }}
+        if: ${{ github.event_name == 'push' && contains(github.event.commits.*.modified, 'files-test/test.text') }}
         run: |
           echo "出力２"
 
